# Tourist_Safety

./: README.md  main.py  pyproject.toml
data/raw/: area_risk.csv
data/scripts/: feature_engineering.py  generatedGPS.py  generated_risk_zones.py
models/: autoencoder.pth  isolation_forest.pkl  lstm_trajectory.pth  risk_model.pkl
notebook/: autoencoder.ipynb  isolation_forest.ipynb  lstm_trajectory.ipynb  risk_model_training.ipynb  unified_intelligence.ipynb
